<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/google_logo"
        android:contentDescription="@string/google_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/with_your_google_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35sp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#d3d3d3"
        android:hint="@string/username_or_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#d3d3d3"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_email"
        android:layout_marginStart="20dp"
        android:textColor="#1769aa"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/create_account"
            android:textColor="#1769aa"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="10dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#2196f3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/next"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap,RtlHardcoded" />

    </RelativeLayout>
</LinearLayout>