<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AvengersActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/kolin_picture"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/hello_sugam1"
        android:textColor="#004d40"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/kotlin_is_fun"
        android:textColor="#d50000"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/click_here"
        android:backgroundTint="#01579b"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name_here"
        android:layout_margin="20dp"
        android:inputType="text"/>
</LinearLayout>