<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtHelloSugam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:text="@string/hello_sugam1"
        android:textColor="#004d40"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtKotlinIsFun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/kotlin_is_fun"
        android:textColor="#d50000"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_below="@+id/txtHelloSugam"/>

    <ImageView
        android:id="@+id/imgKotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/kolin_picture" />


    <EditText
        android:id="@+id/etEnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtKotlinIsFun"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:hint="@string/enter_your_name_here"
        android:inputType="text" />

    <Button
        android:id="@+id/btnClickHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#01579b"
        android:text="@string/click_here"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>