<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/avengers_logo" />


    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAvengersLogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/ligth_grey"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/ligth_grey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/ligth_grey"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/ligth_grey"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#9B1F44"
        android:text="@string/log_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:text="Forgot Passwords"
        android:textColor="@color/ligth_grey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="6dp"
        android:text="Register yourself"
        android:textColor="@color/ligth_grey"
        android:textSize="16sp" />
</RelativeLayout>