<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter a message"
                android:textSize="16sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/ligth_grey"
                android:backgroundTint="@color/ligth_grey"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/btnSendMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textSize="16sp"
                android:padding="6dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/teal_700"
                />


        </LinearLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTony"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_margin="20dp"
                android:src="@drawable/tony_stark_new"

                />

            <TextView
                android:id="@+id/txtNameTony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgTony"
                android:text="@string/tony"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailTony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameTony"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTony"
                android:text="@string/tony24_gmail_com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtPhnTony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailTony"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgTony"
                android:text="4866544563"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCaptainAmerica"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/captain_america" />

            <TextView
                android:id="@+id/txtNameCaptainA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgCaptainAmerica"
                android:text="@string/caption_america"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailCaptainA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameCaptainA"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgCaptainAmerica"
                android:text="@string/captionamerica_gmail_com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtPhnCaptianA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailCaptainA"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgCaptainAmerica"
                android:text="82014544563"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgThor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/thor" />

            <TextView
                android:id="@+id/txtNameThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="@string/thor"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="thor2024@gmail.com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtPhnThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailThor"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgThor"
                android:text="4866544563"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgHulk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/hulk" />

            <TextView
                android:id="@+id/txtNameHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="Hulk"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="@string/captionamerica_gmail_com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtPhnHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailHulk"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgHulk"
                android:text="82014544563"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBlackPanther"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/black_panther" />

            <TextView
                android:id="@+id/txtNameBlackPanther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgBlackPanther"
                android:text="BlackPanther"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailBlackPanther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameBlackPanther"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgBlackPanther"
                android:text="BlackPanther11024@gmail.com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtPhnBlackPanther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailBlackPanther"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgBlackPanther"
                android:text="9212525563"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgWidow"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/widow" />

            <TextView
                android:id="@+id/txtNameWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgWidow"
                android:text="@string/widow"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNameWidow"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgWidow"
                android:text="widow20@gmail.com"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txtPhnWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmailWidow"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/imgWidow"
                android:text="942120563"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>
        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/teal_700"
            />
    </LinearLayout>
</ScrollView>